tests/ui/missing-opt.stderr
error: missing #[opt = '…'] attribute
 --> $DIR/missing-opt.rs:8:5
  |
8 |     B,
  |     ^
